--- a/data/static/html/admin_dashboard.html
+++ b/data/static/html/admin_dashboard.html
@@ -1,12 +1,6 @@
-{% extends "base.html" %} {% block title %} Личный кабинет Администратора {%
+{% extends "admin_base.html" %} {% block title %} Личный кабинет Администратора {%
 endblock %} {% block base_content %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
 <div class="container mt-5">
   <h1>Панель администратора</h1>
   <div class="row">
@@ -70,7 +64,5 @@ endblock %} {% block base_content %}
     </div>
   </div>
 </div>
-
-</html>
 
 {% endblock %}
