--- a/data/static/html/admin_manage_programs.html
+++ b/data/static/html/admin_manage_programs.html
@@ -1,196 +1,164 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "admin_base.html" %} {% block title %} Управление программами {% endblock %} {%
+block base_content %}
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Управление программами</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<div class="container mt-5">
+  <h1 class="mb-4">Управление обучающими программами</h1>
 
-    <!-- fontawesome5 -->
-    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.12.1/css/all.css'>
-    <!-- Flatpickr -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr@4.6.3/dist/flatpickr.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr@4.6.3/dist/flatpickr.min.js"
-        integrity="sha256-/irFIZmSo2CKXJ4rxHWfrI+yGJuI16Z005X/bENdpTY=" crossorigin="anonymous"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor@latest/dist/jsoneditor.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
-</head>
-
-<body>
-    <div class="container mt-5">
-        <h1 class="mb-4">Управление обучающими программами</h1>
-
-        <ol class="list-group w-50">
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <a href="#" data-toggle="modal" data-target="#addProgramModal" class="fw-bold"><b>Создать
-                            программу</b></a>
-                    <br>
-                    Создание новой обучающей программы
-                </div>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <a href="#" data-toggle="modal" data-target="#confirmProgramModal" class="fw-bold"><b>Утвердить
-                            программу</b></a>
-                    <br>
-                    Утвердить существующую программу формально
-                </div>
-            </li>
-            <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
-                    <a href="#" data-toggle="modal" data-target="#realizeProgramModal" class="fw-bold"><b>Реализовать
-                            программу</b></a>
-                    <br>
-                    Реализовать утвержденную программу
-                </div>
-            </li>
-        </ol>
-        <div class="modal fade" id="addProgramModal" tabindex="-1" role="dialog" aria-labelledby="addProgramModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="addProgramModalLabel">
-                            Добавить новую программу
-                        </h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form method="POST" action="/admin/add_program" data-json-submit>
-                            <div class="json-editor" id="add-program-json-editor"></div>
-                            <button type="submit" class="btn btn-primary">
-                                Добавить программу
-                            </button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+  <ol class="list-group w-50">
+    <li class="list-group-item d-flex justify-content-between align-items-start">
+      <div class="ms-2 me-auto">
+        <a href="#" data-bs-toggle="modal" data-bs-target="#addProgramModal" class="fw-bold">Создать
+          программу</a>
+        <br>
+        Создание новой обучающей программы
+      </div>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-start">
+      <div class="ms-2 me-auto">
+        <a href="#" data-bs-toggle="modal" data-bs-target="#confirmProgramModal" class="fw-bold">Утвердить
+          программу</a>
+        <br>
+        Утвердить существующую программу формально
+      </div>
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-start">
+      <div class="ms-2 me-auto">
+        <a href="#" data-bs-toggle="modal" data-bs-target="#realizeProgramModal" class="fw-bold">Реализовать
+          программу</a>
+        <br>
+        Реализовать утвержденную программу
+      </div>
+    </li>
+  </ol>
+  <div class="modal fade" id="addProgramModal" tabindex="-1" role="dialog" aria-labelledby="addProgramModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="addProgramModalLabel">
+            Добавить новую программу
+          </h5>
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-        <div class="modal fade" id="confirmProgramModal" tabindex="-1" role="dialog"
-            aria-labelledby="confirmProgramModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="confirmProgramModalLabel">
-                            Утвердить программу
-                        </h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form method="POST" action="/admin/confirm_program" data-json-submit>
-                            <div class="json-editor" id="confirm-program-json-editor"></div>
-                            <button type="submit" class="btn btn-primary">
-                                Утвердить программу
-                            </button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+        <div class="modal-body">
+          <form method="POST" action="/admin/add_program" data-json-submit>
+            <div class="json-editor" id="add-program-json-editor"></div>
+            <button type="submit" class="btn btn-primary">
+              Добавить программу
+            </button>
+          </form>
         </div>
-
-        <div class="modal fade" id="realizeProgramModal" tabindex="-1" role="dialog"
-            aria-labelledby="realizeProgramModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="realizeProgramModalLabel">
-                            Реализовать последнюю утвержденную программу
-                        </h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form method="POST" action="/admin/realize_program" data-json-submit>
-
-                            <div class="json-editor" id="realize-program-json-editor"></div>
-                            <button type="submit" class="btn btn-primary">
-                                Реализовать программу
-                            </button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-
+      </div>
+    </div>
+  </div>
+  <div class="modal fade" id="confirmProgramModal" tabindex="-1" role="dialog"
+    aria-labelledby="confirmProgramModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="confirmProgramModalLabel">
+            Утвердить программу
+          </h5>
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
+        <div class="modal-body">
+          <form method="POST" action="/admin/confirm_program" data-json-submit>
+            <div class="json-editor" id="confirm-program-json-editor"></div>
+            <button type="submit" class="btn btn-primary">
+              Утвердить программу
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
+  <div class="modal fade" id="realizeProgramModal" tabindex="-1" role="dialog"
+    aria-labelledby="realizeProgramModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="realizeProgramModalLabel">
+            Реализовать последнюю утвержденную программу
+          </h5>
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form method="POST" action="/admin/realize_program" data-json-submit>
+
+            <div class="json-editor" id="realize-program-json-editor"></div>
+            <button type="submit" class="btn btn-primary">
+              Реализовать программу
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        const addProgramSchema = {{ add_program_schema | tojson }}
-        const confirmProgramSchema = {{ confirm_program_schema | tojson }}
-        const realizeProgramSchema = {{ realize_program_schema | tojson }}
+  </div>
 
-        function addEditor(id, schema) {
-            console.log(id)
-            let editor = new JSONEditor(document.getElementById(id), {
-                theme: "bootstrap5",
-                schema: schema,
-                disable_collapse: true,
-                disable_edit_json: true,
-                disable_properties: true,
-                iconlib: "fontawesome5",
-            });
+</div>
 
-            editor.on('ready', function () {
-                let form = $('#' + id).find('.row');
-                form.find(".form-control").prop("required", true);
 
-                $('.card-title').hide();
-            });
+<script>
+  const addProgramSchema = {{ add_program_schema | tojson }}
+  const confirmProgramSchema = {{ confirm_program_schema | tojson }}
+  const realizeProgramSchema = {{ realize_program_schema | tojson }}
 
-            document.getElementById(id).parentElement.addEventListener('submit', function (event) {
+  function addEditor(id, schema) {
+    console.log(id)
+    let editor = new JSONEditor(document.getElementById(id), {
+      theme: "bootstrap5",
+      schema: schema,
+      disable_collapse: true,
+      disable_edit_json: true,
+      disable_properties: true,
+      iconlib: "fontawesome5",
+    });
 
-                event.preventDefault();
-                var url = this.getAttribute('action');
-                var method = this.getAttribute('method');
-                var xhr = new XMLHttpRequest();
-                xhr.open(method, url, true);
-                xhr.setRequestHeader('Content-Type', 'application/json');
-                xhr.onload = function () {
-                    if (xhr.status === 200) {
-                        location.reload();
-                    } else {
-                        alert("Ошибка: " + JSON.parse(xhr.responseText).detail);
-                    }
-                };
-                if (editor.validate().length === 0) {
-                    xhr.send(JSON.stringify(editor.getValue()));
-                } else {
-                    console.log(editor.validate())
-                    alert("Неверно заполнены данные")
-                }
-            });
+    editor.on('ready', function () {
+      let form = $('#' + id).find('.row');
+      form.find(".form-control").prop("required", true);
+
+      $('.card-title').hide();
+    });
+
+    document.getElementById(id).parentElement.addEventListener('submit', function (event) {
+
+      event.preventDefault();
+      var url = this.getAttribute('action');
+      var method = this.getAttribute('method');
+      var xhr = new XMLHttpRequest();
+      xhr.open(method, url, true);
+      xhr.setRequestHeader('Content-Type', 'application/json');
+      xhr.onload = function () {
+        if (xhr.status === 200) {
+          location.reload();
+        } else {
+          alert("Ошибка: " + JSON.parse(xhr.responseText).detail);
         }
+      };
+      if (editor.validate().length === 0) {
+        xhr.send(JSON.stringify(editor.getValue()));
+      } else {
+        console.log(editor.validate())
+        alert("Неверно заполнены данные")
+      }
+    });
+  }
 
-        document.addEventListener('DOMContentLoaded', function () {
-            addEditor("add-program-json-editor", addProgramSchema);
-            addEditor("confirm-program-json-editor", confirmProgramSchema);
-            addEditor("realize-program-json-editor", realizeProgramSchema);
-        });
+  document.addEventListener('DOMContentLoaded', function () {
+    addEditor("add-program-json-editor", addProgramSchema);
+    addEditor("confirm-program-json-editor", confirmProgramSchema);
+    addEditor("realize-program-json-editor", realizeProgramSchema);
+  });
 
-    </script>
+</script>
 
-</body>
-
-</html>
+{% endblock %}
