Добавлены новые шрифты, исправления недоработок

--- a/data/static/html/admin_login.html
+++ b/data/static/html/admin_login.html
@@ -5,11 +5,11 @@ block base_content %}
 <div class="container">
   <h1 class="mt-4">Вход для администратора</h1>
   <form class="mt-4" id="loginForm" method="post" action="/admin/token">
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="email">Email:</label>
       <input type="text" class="form-control" id="email" name="email" required />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="password">Пароль:</label>
       <input type="password" class="form-control" id="password" name="password" required />
     </div>
