--- a/data/static/html/login.html
+++ b/data/static/html/login.html
@@ -4,15 +4,15 @@ block base_content %}
 <div class="container">
   <h1 class="mt-4">Вход</h1>
   <form class="mt-4" id="loginForm" method="post" action="/token">
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="fullName">ФИО обучающегося:</label>
       <input type="text" class="form-control" id="fullName" name="fullName" required value="Иванов Иван Иванович" />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="birthDate">Дата рождения:</label>
       <input type="text" class="form-control datepicker" id="birthDate" name="birthDate" required />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="password">Пароль:</label>
       <input type="password" class="form-control" id="password" name="password" required />
     </div>
