--- a/data/static/html/registration.html
+++ b/data/static/html/registration.html
@@ -3,39 +3,39 @@ base_content %}
 <div class="container">
   <h1 class="mt-4">Регистрация</h1>
   <form class="mt-4" id="registrationForm" method="post" action="/registration">
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="fullName">ФИО обучающегося:</label>
       <input type="text" class="form-control" id="fullName" name="fullName" required value="Иванов Иван Иванович" />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="email">Email обучающегося:</label>
       <input type="email" class="form-control" id="email" name="email" required value="ivanov@example.com" />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="password">Пароль:</label>
       <input type="password" class="form-control" id="password" name="password" required />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="confirmPassword">Подтвердите пароль:</label>
       <input type="password" class="form-control" id="confirmPassword" name="confirmPassword" required />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="parentEmail">Email представителя (опционально):</label>
       <input type="email" class="form-control" id="parentEmail" name="parentEmail" value="parent@example.com" />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="school">Основная школа:</label>
       <input type="text" class="form-control" id="school" name="school" required value="Школа №123" />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="schoolClass">Класс:</label>
       <input type="number" class="form-control" id="schoolClass" name="schoolClass" required value="2015" />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="birthDate">Дата рождения (ДД.ММ.ГГГГ):</label>
       <input type="text" class="form-control" id="birthDate" name="birthDate" required placeholder="ДД.ММ.ГГГГ" />
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
       <label for="captcha">Введите сообщение с картинки:</label><br />
       <img id="captchaImg" class="mb-2" src="/captcha" />
       <input type="text" class="form-control" id="captcha" name="captcha" required />
