--- a/data/static/html/admin_dashboard.html
+++ b/data/static/html/admin_dashboard.html
@@ -41,7 +41,7 @@ endblock %} {% block base_content %}
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <a href="/error" class="fw-bold">Просмотр учеников</a>
+            <a href="/admin/edit_users" class="fw-bold">Просмотр учеников</a>
             <br>
             Просмотр и изменение данных
           </div>
