--- a/data/static/html/base.html
+++ b/data/static/html/base.html
@@ -21,7 +21,7 @@
   <div id="header-container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">
-        <img src="/static/icons/cs.png" width="20%" height="20%" class="d-inline-block align-top" />
+        <img src="/static/icons/cs.png" width="20%" height="20%" class="navbar-logo d-inline-block align-top" />
       </a>
       <button class="navbar-toggler" type="button" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
