--- a/data/static/html/admin_edit_users.html
+++ b/data/static/html/admin_edit_users.html
@@ -17,7 +17,8 @@ block base_content %}
         преподавателя</button>
     </div>
     <div class="col-auto">
-      <button id="btn-set-order" class="btn btn-primary btn-multiselect">Указать номер приказа о зачислении</button>
+      <button id="btn-set-order" data-bs-toggle="modal" data-bs-target="#setOrderModal"
+        class="btn btn-primary btn-multiselect">Указать номер приказа о зачислении</button>
     </div>
   </div>
 
@@ -36,7 +37,7 @@ block base_content %}
         </div>
         <div class="modal-body">
           <p class="mb-2">Вы собираетесь установить преподавателя для следующих пользователей:</p>
-          <p id="selected-users-list-txt"></p>
+          <p class="selected-users-list-txt"></p>
           <label for="teacher-select">Выберите преподавателя:</label>
           <select class="form-control" id="teacher-select">
             {% for teacher in teachers %}
@@ -58,6 +59,35 @@ block base_content %}
   </div>
 
 
+  <div class="modal fade" id="setOrderModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">
+            Указать приказ о зачислении
+          </h5>
+          <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p class="mb-2">Вы собираетесь установить приказ о зачислении для следующих пользователей:</p>
+          <p class="selected-users-list-txt"></p>
+          <input class="form-control" id="order-number" placeholder="Номер приказа" />
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+            Закрыть
+          </button>
+          <button id="btn-set-order-submit" type="button" class="btn btn-success success-modal-btn"
+            data-bs-dismiss="modal">
+            Установить
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
   <div>
     <div>
@@ -71,7 +101,7 @@ block base_content %}
             <th>Телефон</th>
             <th>Программа</th>
             <th>Статус</th>
-            <th>Документы</th>
+            <th>Приказ о зачиcлении</th>
             <th>Редактировать</th>
           </tr>
         </thead>
@@ -89,9 +119,7 @@ block base_content %}
               <td>{{ user.phone }}<br>{{ user.parentPhone }} (род.)</td>
               <td>{{ user.application.selectedProgram }}</td>
               <td>{{ user.application.status }}</td>
-              <td>
-                <a href=" /admin/get_pdf_docs?user_id={{ user.id }}">Документы</a>
-              </td>
+              <td> {% if user.application.order %} {{ user.application.order }} {% else %} - {% endif %} </td>
               <td>
                 <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#rejectModal{{ user.id }}"
                   data-id="{{ user.id }}">
@@ -139,11 +167,7 @@ block base_content %}
     });
 
 
-    $("#btn-set-teacher").on("click", function () {
-      let selectedIds = getSelected("id");
-      let selectedNames = getSelected("fullname");
-      $("#selected-users-list-txt").html(selectedNames.join("<br>"));
-    });
+
 
 
     $("#btn-select-all").on("click", function () {
@@ -156,6 +180,12 @@ block base_content %}
       refreshMultiselectButtons();
     });
 
+    $("#btn-set-teacher").on("click", function () {
+      let selectedIds = getSelected("id");
+      let selectedNames = getSelected("fullname");
+      $(".selected-users-list-txt").html(selectedNames.join("<br>"));
+    });
+
     $('#btn-set-teacher-submit').on('click', function () {
       let selectedIds = getSelected("id");
 
@@ -165,6 +195,31 @@ block base_content %}
           'Content-Type': 'application/json',
         },
         body: JSON.stringify({ usersIds: selectedIds, teacherName: $('#teacher-select').val() }),
+      })
+        .then(response => response.json())
+        .then(data => {
+          console.log('Success:', data);
+        })
+        .catch((error) => {
+          console.error('Error:', error);
+        });
+    });
+
+    $("#btn-set-order").on("click", function () {
+      let selectedIds = getSelected("id");
+      let selectedNames = getSelected("fullname");
+      $(".selected-users-list-txt").html(selectedNames.join("<br>"));
+    });
+
+    $('#btn-set-order-submit').on('click', function () {
+      let selectedIds = getSelected("id");
+
+      fetch('/admin/set_order', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({ usersIds: selectedIds, order: $('#order-number').val() }),
       })
         .then(response => response.json())
         .then(data => {
