--- a/data/static/html/login.html
+++ b/data/static/html/login.html
@@ -20,6 +20,9 @@ block base_content %}
   </form>
 </div>
 
+
+<a class="m-2" href="/admin/login" style="position: absolute; bottom: 0; right: 0; color: #00000022">Администратор
+</a>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     flatpickr(".datepicker", {
