Подсказка для пользвоателя (Adobe scan)

--- a/data/static/html/send_docs.html
+++ b/data/static/html/send_docs.html
@@ -4,6 +4,8 @@
 <div class="container">
   <h1 class="mt-4">Загрузка документов</h1>
 
+  <p>Загрузите сканы/фото документов. Для сканирования с телефона можно воспользоваться приложением <a href="https://www.adobe.com/acrobat/mobile/scanner-app.html">Adobe Scan</a>. Загружать можно в форматах <b>.jpg, .png, .pdf</b></p>
+
   {% if lastRejectionReason %}
   <div class="warning mt-4">
     Внимание! Документы и/или данные были отклонены. Причина: {{
