Возможность админу редактировать пользователей и конфиг

--- a/data/static/html/admin_dashboard.html
+++ b/data/static/html/admin_dashboard.html
@@ -9,7 +9,7 @@ endblock %} {% block base_content %}
       <ol class="list-group">
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <a href="/admin/approve" class="fw-bold">Подтверждение заявок</a>
+            <a href="/admin/approve" class="fw-bold">📜 Подтверждение заявок</a>
             <br>
             Проверка документов и данных
           </div>
@@ -20,7 +20,7 @@ endblock %} {% block base_content %}
 
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <a href="/admin/rejected_users_by_docs" class="fw-bold">Отклоненные заявки</a>
+            <a href="/admin/rejected_users_by_docs" class="fw-bold">❌ Отклоненные заявки</a>
             <br>
             Просмотр отклоненных заявок
           </div>
@@ -31,7 +31,7 @@ endblock %} {% block base_content %}
 
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <a href="/admin/competition" class="fw-bold">Зачисление</a>
+            <a href="/admin/competition" class="fw-bold">✔️ Зачисление</a>
             <br>
             Зачисление на основе конкурса
           </div>
@@ -41,21 +41,28 @@ endblock %} {% block base_content %}
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <a href="/admin/edit_users" class="fw-bold">Просмотр учеников</a>
+            <a href="/admin/edit_users" class="fw-bold">👀 Просмотр учеников</a>
             <br>
             Просмотр и изменение данных
           </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <a href="/admin/manage_programs" class="fw-bold">Редактировать программы</a>
+            <a href="/admin/manage_programs" class="fw-bold">✏️ Редактировать программы</a>
             <br>
             Создать, утвердить, реализовать
           </div>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <a href="/admin/statictics" class="fw-bold">Статистика</a>
+            <a href="/admin/config" class="fw-bold">⚙️ Настройки</a>
+            <br>
+            Указать различные ссылки, список преподавателей и т.д.
+          </div>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
+            <a href="/admin/statictics" class="fw-bold">📊 Статистика</a>
             <br>
             Инструменты статистики
           </div>
