--- a/data/static/html/admin_dashboard.html
+++ b/data/static/html/admin_dashboard.html
@@ -62,6 +62,13 @@ endblock %} {% block base_content %}
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
+            <a href="/admin/graduate" class="fw-bold"> 🎓 Выпуск учеников</a>
+            <br>
+            Завершение семестра с указанием оценок
+          </div>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-start">
+          <div class="ms-2 me-auto">
             <a href="/admin/statictics" class="fw-bold">📊 Статистика</a>
             <br>
             Инструменты статистики
