Массовый поиск по ФИО

--- a/data/static/html/admin_dashboard.html
+++ b/data/static/html/admin_dashboard.html
@@ -69,7 +69,7 @@ endblock %} {% block base_content %}
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-start">
           <div class="ms-2 me-auto">
-            <a href="/admin/statictics" class="fw-bold">📊 Статистика</a>
+            <a href="/admin/statistics" class="fw-bold">📊 Статистика</a>
             <br>
             Инструменты статистики
           </div>
